--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,4 +1,4 @@
-name: Discord Bot Deployment
+name: Tests
 
 on:
   push:
@@ -6,24 +6,22 @@ on:
       - main
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Run Discord Bot
-        run: python bot.py
-        env:
-          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+    - name: Run tests
+      run: python -m unittest tests/test_bot.py
